--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,10 +1,15 @@
-.body{
+body{
   font-family: 'Fira Sans', sans-serif;
   font-weight: 400;
 }
-.a{
+a{
   display: inline-block;
   text-decoration: none;
+}
+ul,li{
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .subtitle-left{
   font-size: 22px;
