--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,10 +1,23 @@
+html{
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after{
+  box-sizing: border-box;
+}
+
 body{
   font-family: 'Fira Sans', sans-serif;
   font-weight: 400;
+  background-color: #171919;
+  color: #FFFFFF;
+  text-transform: uppercase;
 }
 a{
   display: inline-block;
   text-decoration: none;
+  color: #ffffff;
 }
 ul,li{
   list-style: none;
@@ -15,8 +28,6 @@ ul,li{
   font-size: 22px;
   line-height: 32px;
   letter-spacing: 7.33333px;
-  text-transform: uppercase;
-  color: #FFFFFF;
   opacity: 0.5;
   padding-left: 103px;
   position: relative;
@@ -25,9 +36,55 @@ ul,li{
     content: "";
     position: absolute;
     width: 80px;
-    height: 1px;
-    background-color: #fff;
+    height: 2px;
     left: 0;
     top: 50%;
+    background-color: #FFFFFF;
+  }
+}
+.container{
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.subtitle{
+  display: inline-block;
+  text-align: right;
+  &_head{
+    font-size: 40px;
+    font-weight: 800;
+    padding-right: 10px;
+  span{
+    font-weight: 100;
+  }
+  }
+}
+
+.title{
+  span{
+    font-size: 200px;
+    font-weight: 800;
+    color: rgba(#fff,.02);
+    position: relative;
+    transform: translateX(-50px);
+    display: inline-block;
+     }
+  h3{
+    position: absolute;
+    top: 0;
+    right: -5px;
+    font-size: 80px;
+    color: #FFFFFF;
+    margin: 0;
+    &::after{
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 80px;
+      height: 1px;
+      background-color: green;
+
+    }
   }
 }
