--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,8 +25,6 @@
   right: 80px;
   bottom: 116px;
   text-align: right;
-  text-transform: uppercase;
-  color: #FFFFFF;
 }
 
 .slider-item_info-subtitle {
@@ -73,7 +71,6 @@
   bottom: 36px;
   max-width: 920px;
   width: 100%;
-  color: #FFFFFF;
 
   .slick-current {
     .dots-box {
@@ -100,6 +97,7 @@
   &__name {
     font-weight: 300;
     line-height: 19px;
+    text-transform: capitalize;
   }
 }
 
@@ -111,15 +109,12 @@
   z-index: 5;
   border-right: 1px solid rgba(#fff, .25);
   height: 100vh;
-  color: #FFFFFF;
 }
 
 .header_title {
   font-weight: 800;
   font-size: 200px;
   line-height: 156px;
-  text-transform: uppercase;
-  color: #FFFFFF;
   opacity: 0.07;
   max-width: 467px;
   position: absolute;
@@ -132,7 +127,6 @@
   margin-top: 25px;
 
   a {
-    color: #FFFFFF;
 
     span {
       display: block;
@@ -143,6 +137,7 @@
       letter-spacing: 3px;
       padding-top: 6px;
       margin-bottom: 37px;
+      text-transform: capitalize;
     }
   }
 }
@@ -160,6 +155,7 @@
     letter-spacing: 1.4px;
     margin-bottom: 30px;
     display: block;
+
   }
 }
 
@@ -169,6 +165,7 @@
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 1.05px;
+  text-transform: capitalize;
 }
 
 .header_map{
@@ -184,6 +181,20 @@
   bottom: 40px;
   z-index: 3;
 }
+
+.surf{
+  padding: 160px 0 210px;
+  height: 100vh;
+}
+
+.surf_subtitle{
+  text-align: right;
+  padding-right: 80px;
+  margin-top: -86px;
+}
+
+
+
 
 
 @import "media";
