--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -185,6 +185,10 @@
 .surf{
   padding: 160px 0 210px;
   height: 100vh;
+  background-image: url("../img/poi.svg");
+  background-position:  right 200px;
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 
 .surf_subtitle{
